# pure14-standalone

./: .gitignore  README.md  pure11.cabal  pure14.cabal
include/: any_map.hh  bind.hh  memory.hh  prelude_ffi.hh  purescript.hh  shared_list.hh
pcc/: Main.hs
src/Language/PureScript/CodeGen/: Cpp.hs
